# oracl-codex

maestro/: README.md  pyproject.toml
maestro/finetune/: README.md
maestro/finetune/configs/: qwen25_3b_qlora.yaml
maestro/finetune/scripts/: eval_tmps.py  extract_real_pairs.py  filter_and_split.py  generate_synth_dataset.py
maestro/maestro/: cli.py  config.py  log.py  maestro_entry.py  maestro_model.py  store.py  tmps_controller.py  tmps_validator.py
maestro/maestro/llm/: __init__.py  hf_client.py  ollama_client.py  prompts.py
maestro/maestro/orch/: artifact.py  checks.py  context.py  delta.py  escalate.py  orchestrator.py  patch.py  routing.py  sandbox.py
maestro/maestro/tmps/: normalize.py  parser.py  types.py  validate.py
maestro/tests/: test_artifact_parse.py  test_config.py  test_ollama_client.py  test_orchestrator_loop_mocked.py  test_patch_apply.py  test_tmps_controller.py  test_tmps_normalize.py  test_tmps_parser.py  test_tmps_validate.py  test_tmps_validator_strict.py
